# arch_whisper

./: .gitignore  KICKOFF_PROMPT.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
docs/plans/initial_plan/: BEADS.md  ROUGH_PLAN.md  TECHNICAL_DESIGN.md  TECHNICAL_DESIGN_REVISED.md
src/arch_whisper/: __init__.py  __main__.py  app.py  config.py  notifications.py  preflight.py  utils.py
src/arch_whisper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/arch_whisper/audio/: player.py  recorder.py
src/arch_whisper/auth/: claude_max.py
src/arch_whisper/hotkey/: __init__.py  manager.py  wayland.py  x11.py
src/arch_whisper/paste/: __init__.py  clipboard.py  manager.py  wayland.py  x11.py
src/arch_whisper/postprocess/: __init__.py  claude.py
src/arch_whisper/transcription/: __init__.py  whisper.py
src/arch_whisper/tray/: __init__.py  indicator.py
tests/: __init__.py  test_claude_postprocessor.py  test_config.py  test_terminal_detection.py  test_timestamp_parsing.py
