[project]
name = "arch-whisper"
version = "0.1.0"
description = "Push-to-talk voice transcription tool for Linux"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "faster-whisper>=1.0.0",
    "anthropic>=0.40.0",
    "pynput>=1.7.6",
    "evdev>=1.6.0",
    "pyperclip>=1.8.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "claude-agent-sdk>=0.1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3.10",
    "ruff>=0.1",
    "mypy>=1",
]

[project.scripts]
arch-whisper = "arch_whisper.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arch_whisper = ["assets/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
